# fresh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURSOR_RENDERING_ANALYSIS.md  Cargo.toml  DESIGN-auto-save-unnamed-buffers.md  ISSUE_TRIAGE.md  README.md  config-schema.json  eval-diagnostics-panel.md  fresh-dts-review.md  issue-931-investigation.md  issue-953-reproduction-report.md  plan.md
.github/workflows/: appimage-build.yml  aur-publish.yml  cargo-publish.yml  ci.yml  deploy-docs.yml  flatpak-build.yml  freebsd-builds.yml  gui-builds.yml  linux-packages.yml  musl-builds.yml  release.yml  winget-publish.yml
crates/fresh-core/: Cargo.toml
crates/fresh-editor/: Cargo.toml  build.rs  (+1 more)
crates/fresh-editor/tests/fixtures/syntax_highlighting/: BUILD.bazel  CMakeLists.txt  Containerfile  Dockerfile  Dockerfile.dev  Earthfile  GNUmakefile  Gemfile  Jenkinsfile  Makefile  Rakefile  Tiltfile  Vagrantfile  docker-compose.yml  dot_bashrc  dot_profile  embedded_css_long.html  go.mod  hello.astro  hello.bash  hello.bat  hello.cc  hello.cjs  hello.clj  hello.d  hello.dart  hello.diff  hello.editorconfig  hello.env  hello.erl  hello.ex  hello.fs  hello.gitconfig  hello.gitignore  hello.gleam  hello.graphql  hello.h  hello.hpp  hello.hs  hello.ini  (+42 more)
crates/fresh-winterm/: Cargo.toml
crates/fresh-winterm/src/: lib.rs  relay.rs  terminal_size.rs  vt_input.rs
docs/: i18n.md  index.md  language-support-review.md  privacy.md  troubleshooting.md
homepage/: index.html
scripts/: bump-version.py  check-semantic-test-isolation.sh  frames-to-gif.sh  gen_schema.sh  generate-theme-screenshots.sh  install.sh  mutants-fast.sh  stress-extract-race.sh  update-showcases.sh
(+987 files in other folders)
